[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grok-credits-tracker"
version = "0.1.0"
description = "Hermes companion CLI for the grok.com Grok subscription credit meter using Hermes xAI OAuth."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.24",
  "PyYAML>=6",
]
authors = [{ name = "Logan Saether" }]
keywords = ["grok", "xai", "supergrok", "hermes", "waybar"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]

[project.scripts]
grok-credits = "grok_credits:main"

[tool.setuptools]
py-modules = ["grok_credits"]
